--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -161,5 +161,16 @@
     "line:0f9e764": "【続く】ライフ{{0}}％を回復し、最大ライフ{{1}}を得る",
     "line:07aab8f": "成美は<Player />に微笑みながら，魔法で彼女を晴れやかにした。",
     "line:0cc67e1": "【続く】ライフを全回復し、最大ライフ{{0}}を得る"
+  },
+  "NazrinDetect": {
+    "line:062ca0e": "「どうだい、<Player />君。小金を支払っていただければ宝物が手に入るよ」",
+    "line:0b435bf": "【雇う】{{0}}<Money />支払い、報酬を得る",
+    "line:03c7b6c": "【断る】何も起こらない",
+    "line:0aa76a7": "ナズーリンは古硬貨を見つけた！{{0}}<Money />を得る",
+    "line:0bf5da1": "ああっと、ナズーリンは呪われた罠にかかった！ランダムな厄災カード一枚を手に入れる",
+    "line:04d438a": "ナズーリンが展覧会から失われた宝物をみつけた！展示品をひとつ手に入れる",
+    "line:0bc8048": "ナズーリンは温泉を発見した、ライフを全回復する",
+    "line:0e8e6c2": "ナズーリンは妖精の融合ハンマーを発見した！カード一枚をアップグレードする",
+    "line:0766cf1": "ナズーリンは古いお香を発見した、カード一枚を削除する"
   }
 }
