--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -172,5 +172,11 @@
     "line:0bc8048": "ナズーリンは温泉を発見した、ライフを全回復する",
     "line:0e8e6c2": "ナズーリンは妖精の融合ハンマーを発見した！カード一枚をアップグレードする",
     "line:0766cf1": "ナズーリンは古いお香を発見した、カード一枚を削除する"
+  },
+  "HecatiaTshirt": {
+    "line:008fa52": "「一緒にかぐやちゃんを応援するわよん！」",
+    "line:0678716": "【服を受け取る】<h>オタクTシャツ</h>を手に入れる",
+    "line:01566ec": "【服を受け取る】<h>オタクTシャツ(L)</h>を手に入れる",
+    "line:00d22b0": "【遠慮する】何も起こらない"
   }
 }
