--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -178,5 +178,14 @@
     "line:0678716": "【服を受け取る】<h>オタクTシャツ</h>を手に入れる",
     "line:01566ec": "【服を受け取る】<h>オタクTシャツ(L)</h>を手に入れる",
     "line:00d22b0": "【遠慮する】何も起こらない"
+  },
+  "KeineSales": {
+    "line:0285d02": "「細かいことは気にするな！寺子屋に出資すれば、外の世界の『三種の神器』が当たる問題に挑戦できるぞ！」",
+    "line:07b190b": "【質問に答える】{{0}}<Money />を払い、ひとつの問題に答える",
+    "line:0ee3db9": "【無視する】{{0}}<Power />を失う",
+    "line:06dcb37": "「お目が高い！答えてもらう問題は——」",
+    "line:0032bb0": "【数学問題】正解すれば、<h>{{0}}</h>が手に入る",
+    "line:008a879": "【歴史問題】正解すれば、<h>{{0}}</h>が手に入る",
+    "line:05bdc79": "【電機問題】正解すれば、<h>{{0}}</h>が手に入る"
   }
 }
