--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -187,5 +187,11 @@
     "line:0032bb0": "【数学問題】正解すれば、<h>{{0}}</h>が手に入る",
     "line:008a879": "【歴史問題】正解すれば、<h>{{0}}</h>が手に入る",
     "line:05bdc79": "【電機問題】正解すれば、<h>{{0}}</h>が手に入る"
+  },
+  "MikeInvest": {
+    "line:0455736": "「今すぐ投資すれば確実な利益が得られるよ。もっと知りたい？」",
+    "line:09abc03": "【長期投資】{{0}} <Money />支払い、カード<h>{{1}}</h>を獲得する.",
+    "line:085816e": "【短期投資】{{0}} <Money />支払い、 レアカード一枚を獲得する",
+    "line:0b1cdeb": "【遠慮する】何も起こらない"
   }
 }
