--- a/public/locales/en/dialogues.json
+++ b/public/locales/en/dialogues.json
@@ -193,5 +193,10 @@
     "line:09abc03": "[Long-Term Investment] Lose {{0}} <Money />, gain <h>{{1}}</h>.",
     "line:085816e": "[Short-Term Investment] Lose {{0}} <Money />, gain a random Rare card.",
     "line:0b1cdeb": "[Reject] Nothing happens."
+  },
+  "YoumuDelivery": {
+    "line:0577ef3": "\"Miss <Player />, could you do a taste-test for me before I deliver them to Yuyuko-sama?\"",
+    "line:0ea45c4": "[Iced Tricolor Dango] Transform one card into an Upgraded multicolor card.",
+    "line:0d7cfde": "[Sardinia Mooncake] Gain Exhibit: <h>{{1}}</h>, and gain Misfortune: <h>{{0}}</h>."
   }
 }
