--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -193,5 +193,10 @@
     "line:09abc03": "【長期投資】{{0}} <Money />支払い、カード<h>{{1}}</h>を獲得する.",
     "line:085816e": "【短期投資】{{0}} <Money />支払い、 レアカード一枚を獲得する",
     "line:0b1cdeb": "【遠慮する】何も起こらない"
+  },
+  "YoumuDelivery": {
+    "line:0577ef3": "「<Player />さん、幽々子様にお届けする前に、味見してみてもらえませんか？」",
+    "line:0ea45c4": "【冷やし三色団子】カードを一枚選び、アップグレード済みの多色カードに変化させる",
+    "line:0d7cfde": "【サルデーニャ風月餅】展示品<h>{{1}}</h>を得る、厄災：<h>{{0}}</h>"
   }
 }
