--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -198,5 +198,12 @@
     "line:0577ef3": "「<Player />さん、幽々子様にお届けする前に、味見してみてもらえませんか？」",
     "line:0ea45c4": "【冷やし三色団子】カードを一枚選び、アップグレード済みの多色カードに変化させる",
     "line:0d7cfde": "【サルデーニャ風月餅】展示品<h>{{1}}</h>を得る、厄災：<h>{{0}}</h>"
+  },
+  "RemiliaMeet": {
+    "line:0c6dafc": "「土下座して頼むなら、手伝ってあげてもいいわよ」",
+    "line:0b0f1b1": "【助けを求める】基本攻撃カードを<h>吸血カード</h>と交換する。厄災：<h>{{2}}</h>",
+    "line:0aa0a2f": "【交換】基本攻撃カードを<h>吸血カード</h>と交換し、<h>{{2}}</h>を失う",
+    "line:0855034": "【無効】<h>{{0}}</h>が必要",
+    "line:014dfb8": "【遠慮する】何も起こらない"
   }
 }
