--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -205,5 +205,11 @@
     "line:0aa0a2f": "【交換】基本攻撃カードを<h>吸血カード</h>と交換し、<h>{{2}}</h>を失う",
     "line:0855034": "【無効】<h>{{0}}</h>が必要",
     "line:014dfb8": "【遠慮する】何も起こらない"
+  },
+  "RingoEmp": {
+    "line:00a9945": "「あれは私達の技術を盗んだ模造品なのよ、月の都の権利を守るために手を貸してくれると嬉しいわ",
+    "line:05575e9": "【権利保護に協力する】道具カード：<h>{{0}}</h>を得る",
+    "line:0b93b5a": "【協力を拒否する】ランダムな三枚の道具カードを得る、厄災：<h>{{0}}</h>",
+    "line:095a793": "【関係ない】何も起こらない"
   }
 }
