--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -211,5 +211,13 @@
     "line:05575e9": "【権利保護に協力する】道具カード：<h>{{0}}</h>を得る",
     "line:0b93b5a": "【協力を拒否する】ランダムな三枚の道具カードを得る、厄災：<h>{{0}}</h>",
     "line:095a793": "【関係ない】何も起こらない"
+  },
+  "YachieOppression": {
+    "line:037c786": "「カワウソ霊が河童からはぐれたドローンの存在を嗅ぎつけました。地上の平和のために、出来るだけ早く対処してくださいね～」",
+    "line:07acb62": "【退治】ドローンの一隊と戦い、ランダムなレア展示品を得る",
+    "line:09e89c0": "【拒否する】厄災：<h>{{0}}</h>",
+    "line:0970713": "「流石ですね<Player />。こちらを用意したので受け取って下さい。」",
+    "line:0e2d8d9": "【受け取る】展示品<h>{{0}}</h>を得る",
+    "line:01fd35f": "【遠慮する】何も起こらない"
   }
 }
