--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -219,5 +219,10 @@
     "line:0970713": "「流石ですね<Player />。こちらを用意したので受け取って下さい。」",
     "line:0e2d8d9": "【受け取る】展示品<h>{{0}}</h>を得る",
     "line:01fd35f": "【遠慮する】何も起こらない"
+  },
+  "AssistKagerou": {
+    "line:0d31645": "「<Player />、この宝物をあげるから早く異変を解決してくれないかな～」",
+    "line:09559cc": "【毛は勘弁して】ランダムで1つの展示物を入手、道具カード<h>{{0}}</h>を得る",
+    "line:05b62f1": "【このままでいい】<Power />{{0}}を得る"
   }
 }
