--- a/public/locales/en/dialogues.json
+++ b/public/locales/en/dialogues.json
@@ -219,5 +219,10 @@
     "line:0970713": "\"As expected of <Player />! Please accept my carefully prepared gift!\"",
     "line:0e2d8d9": "[Accept] Gain Exhibit: <h>{{0}}</h>.",
     "line:01fd35f": "[Decline] Nothing happens."
+  },
+  "AssistKagerou": {
+    "line:0d31645": "\"Miss <Player />, will this treasure I found help you resolve the incident faster?\"",
+    "line:09559cc": "[No Fluff] Gain a random Exhibit. Add <h>{{0}}</h> to the library.",
+    "line:05b62f1": "[Yes Fluff] Gain {{0}} <Power />."
   }
 }
