--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -224,5 +224,11 @@
     "line:0d31645": "「<Player />、この宝物をあげるから早く異変を解決してくれないかな～」",
     "line:09559cc": "【毛は勘弁して】ランダムで1つの展示物を入手、道具カード<h>{{0}}</h>を得る",
     "line:05b62f1": "【このままでいい】<Power />{{0}}を得る"
+  },
+  "EternityAscension": {
+    "line:0e35dc4": "「<Player />、こっちに来て『常夜神』の祝福を受けましょ！」",
+    "line:0122dcf": "【啓示を賜る】カードを一枚アップグレードする",
+    "line:0663fce": "【忘却を賜る】ライフを {{0}} 失い、デッキからカードを一枚削除する",
+    "line:0786492": "【変化を賜る】ライフを {{0}} 失い、カードを一枚アンコモンのカードに変化させる"
   }
 }
