--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -230,5 +230,11 @@
     "line:0122dcf": "【啓示を賜る】カードを一枚アップグレードする",
     "line:0663fce": "【忘却を賜る】ライフを {{0}} 失い、デッキからカードを一枚削除する",
     "line:0786492": "【変化を賜る】ライフを {{0}} 失い、カードを一枚アンコモンのカードに変化させる"
+  },
+  "KaguyaVersusMokou": {
+    "line:0bc6368": "（何で喧嘩してるのか分からないけど、放置してたら玉の枝を盗んだ奴が逃げちゃうかも）",
+    "line:008a9a4": "【輝夜に味方する】ライフ{{0}}を失い、展示物<h>{{1}}</h>を得る",
+    "line:0d3703c": "【妹紅に味方する】ライフ{{0}}を失い、展示物<h>{{1}}</h>を得る",
+    "line:0db14e0": "【無視する】何も起こらない"
   }
 }
