--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -236,5 +236,17 @@
     "line:008a9a4": "【輝夜に味方する】ライフ{{0}}を失い、展示物<h>{{1}}</h>を得る",
     "line:0d3703c": "【妹紅に味方する】ライフ{{0}}を失い、展示物<h>{{1}}</h>を得る",
     "line:0db14e0": "【無視する】何も起こらない"
+  },
+  "MystiaBbq": {
+    "line:0b7dfd2": "「<Player />もどう？串焼きを食べたら異変解決のやる気が湧いてくるんじゃない？」",
+    "line:026a5bc": "【ヤツメウナギを頼む】ライフを {{0}} 回復",
+    "line:06598ae": "【焼きキノコを頼む】 {{0}} <Power />獲得",
+    "line:0c3600a": "【何も食べない】そのまま去る",
+    "line:06bc591": "「はいよー、ヤツメウナギ一つで {{0}} <Money />ね～」",
+    "line:03e0868": "【通常通り払う】{{0}} <Money /> 失う",
+    "line:0284c65": "【食い逃げ】びた一文払わない",
+    "line:0f8955e": "「はいよー，焼きキノコ一つで {{0}} <Money />ね～」",
+    "line:0554174": "【定価で払う】{{0}} <Money />を失う",
+    "line:0086f01": "【食い逃げ】びた一文払わない"
   }
 }
