--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -248,5 +248,14 @@
     "line:0f8955e": "「はいよー，焼きキノコ一つで {{0}} <Money />ね～」",
     "line:0554174": "【定価で払う】{{0}} <Money />を失う",
     "line:0086f01": "【食い逃げ】びた一文払わない"
+  },
+  "ParseeJealousy": {
+    "line:0340a4c": "<Player />は水の上に浮かんでいる展示品を見つけた。釣り上げますか？",
+    "line:0557dad": "【はい】展示品を一つ手に入れる",
+    "line:0c4a8da": "【無視する】何も起こらない",
+    "line:028b07c": "「貴方を呪うわ、今夜悪い展示品しか見つからないようにね！」",
+    "line:0bbc877": "【これをあげる】展示品<h>{{0}}</h>を失う",
+    "line:0724a11": "【それをあげる】展示品<h>{{0}}</h>を失う",
+    "line:03c49f5": "【何もあげない】厄災を獲得する：<h>{{0}}</h>"
   }
 }
