--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -257,5 +257,10 @@
     "line:0bbc877": "【これをあげる】展示品<h>{{0}}</h>を失う",
     "line:0724a11": "【それをあげる】展示品<h>{{0}}</h>を失う",
     "line:03c49f5": "【何もあげない】厄災を獲得する：<h>{{0}}</h>"
+  },
+  "RumiaDriving": {
+    "line:05e7754": "<Player />は爆走する宵闇の妖怪が前から来るのに気が付いた。",
+    "line:0240015": "【衝突】ライフを {{0}} 失い、 {{1}} <Money />得る",
+    "line:0311c57": "【避ける】 {{0}} <Power />を失う"
   }
 }
