--- a/public/locales/en/dialogues.json
+++ b/public/locales/en/dialogues.json
@@ -257,5 +257,10 @@
     "line:0bbc877": "[Give an Exhibit] Lose Exhibit: <h>{{0}}</h>.",
     "line:0724a11": "[Give Another Exhibit] Lose Exhibit: <h>{{0}}</h>.",
     "line:03c49f5": "[Give Nothing] Gain Misfortune: <h>{{0}}</h>."
+  },
+  "RumiaDriving": {
+    "line:05e7754": "<Player /> sees a dusk youkai speeding towards her.",
+    "line:0240015": "[Crash] Lose {{0}} life, gain {{1}} <Money />.",
+    "line:0311c57": "[Dodge] Lose {{0}} <Power />."
   }
 }
