--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -262,5 +262,14 @@
     "line:05e7754": "<Player />は爆走する宵闇の妖怪が前から来るのに気が付いた。",
     "line:0240015": "【衝突】ライフを {{0}} 失い、 {{1}} <Money />得る",
     "line:0311c57": "【避ける】 {{0}} <Power />を失う"
+  },
+  "TewiThreat": {
+    "line:05ef949": "<Player /> は道端に大きく膨らんだ袋を見つけた。",
+    "line:051369f": "【手に取る】{{0}} <Money />手に入れる",
+    "line:050bd26": "【無視】何も起こらない",
+    "line:0f3adf4": "「幸運のままでいたいなら、代償が必要だよ」<br />（指で輪っかを作る）",
+    "line:05a79f6": "【全て渡す】 {{0}} <Money />失い、<h>幸運うさぎの足</h>を手に入れる",
+    "line:083edbe": "【いくらか渡す】 {{0}} <Money />失う",
+    "line:0522823": "【脅迫を拒否】厄災：<h>{{0}}</h>"
   }
 }
